Fix misaligned scrolling of InfiniteScrollingTechnologies component

--- a/src/index.css
+++ b/src/index.css
@@ -91,20 +91,3 @@
     transform: scale(1.3);
 }
 
-@keyframes slide {
-    0% {
-        left: -100%
-    }
-    100% {
-        left: 0%;
-    }
-}
-
-.technologies-carousel-track {
-    animation: slide 10s linear infinite;
-}
-
-.technologies-carousel-track:hover {
-    animation-play-state: paused;
-}
-
